# navimow-i105-ha

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml
custom_components/navimow_simple/: __init__.py  api.py  auth.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  lawn_mower.py  manifest.json  sensor.py  strings.json
custom_components/navimow_simple/translations/: de.json  en.json
docs/: 2026-05-31-navimow-simple-design.md  spike-findings.md
docs/plans/: 2026-05-31-navimow-simple-implementation.md
scripts/: spike_auth.py
tests/: conftest.py  test_api.py  test_auth.py  test_button.py  test_config_flow.py  test_const.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_lawn_mower.py  test_sensor.py  test_state_map.py
