[project]
name = "hass-navimow-simple"
version = "0.1.0a4"
requires-python = ">=3.14.2"
dependencies = []

[dependency-groups]
lint = ["ruff>=0.15"]
typecheck = ["homeassistant>=2026.3.0", "ty"]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "pytest-homeassistant-custom-component>=0.13",
    "homeassistant>=2026.3.0",
    "aioresponses>=0.7",
]
dev = [
    {include-group = "lint"},
    {include-group = "typecheck"},
    {include-group = "test"},
]

[tool.ruff]
line-length = 79
target-version = "py313"
# Wegwerf-Spike-Skript (Phase 0): bewusst print-basiert, nicht lint-relevant.
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = ["E","F","I","UP","B","BLE","SIM","C90","RUF","ASYNC","PERF","PGH","G","T20","TC"]
ignore = ["RUF001","RUF002","RUF003"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
